--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= productName %></title>
+    <title>amir's portfolio</title>
 
     <meta charset="utf-8">
     <meta name="description" content="<%= productDescription %>">
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
   </head>
-  <body style="background-color: #16321400;">
+  <body>
     <!-- quasar:entry-point -->
   </body>
 </html>
